@@ -97,7 +97,11 @@ public final class BaselineJavaVersion implements Plugin<Project> {
             @Override
             public void execute(JavaCompile javaCompileTask) {
                 javaCompileTask.getJavaCompiler().set(javaToolchain.flatMap(BaselineJavaToolchain::javaCompiler));
-                enablePreviewOnCompileTask(target, javaCompileTask.getOptions());
+                javaCompileTask
+                        .getOptions()
+                        .getCompilerArgumentProviders()
+                        .add(new EnablePreviewArgumentProvider(target));
+                hackTryToMakePreviewFeaturesWorkInIntellij(target, javaCompileTask.getOptions());
 
                 // Set sourceCompatibility to opt out of '-release', allowing opens/exports to be used.
                 javaCompileTask.doFirst(new Action<Task>() {
@@ -267,8 +271,13 @@ public final class BaselineJavaVersion implements Plugin<Project> {
 
     /**
      * <a href="https://github.com/JetBrains/intellij-community/pull/2135">Further details available here.</a>
+     * This is not guaranteed to work - there's a race that depends on plugin application vs when the javaVersions
+     * closer is applied. However, based on the root project being configured before subprojects, this will likely
+     * catch practical occurrences.
+     * An artifact of this is that compile tasks will get _two_ --enable-preview flags set, although this is
+     * semantically meaningless.
      */
-    private static void enablePreviewOnCompileTask(
+    private static void hackTryToMakePreviewFeaturesWorkInIntellij(
             Provider<ChosenJavaVersion> provider, CompileOptions compileOptions) {
         if (provider.get().enablePreview()) {
             compileOptions.getCompilerArgs().add(EnablePreviewArgumentProvider.FLAG);
